--- a/css/profile.css
+++ b/css/profile.css
@@ -1,80 +1,236 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
     margin: 0;
-    padding: 0;
+    padding: 0
 }
 
-.container_profile_head{
-    border:1px solid red;
+.card {
+   /* height: 430px;*/
+    width: 100%;
+    background-color: #fff;
+    overflow: hidden;
+    border-radius: 10px;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    position: relative
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 999
+}
+
+.overlay .fa-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #fff
+}
+
+.overlay img {
+    object-fit: cover;
+    transition: all 2s;
+    height: 100%;
+    width: 100%
+}
+
+.d-none {
+    display: none
+}
+
+.top-div {
+    position: relative;
+    padding: 20px;
+    font-size: 17px;
+    color: #fff;
+    z-index: 1
+}
+
+.image {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    flex-direction: column;
+    height: 180px;
+    width: 100%
 }
 
-.user_main_avatar{
-    /*border: 1px solid blue;*/
-    width: 125px;
-    height: 125px;
+.image span {
+    height: 90px;
+    width: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 50%;
+    background-color: #ccc;
+    border: 3px solid #fff;
+    z-index: 100
 }
 
-#user_main_avatar_img{
+.image span img {
     width: 100%;
     height: 100%;
     border-radius: 50%;
+    object-fit: cover
 }
 
-.user_name_address{
+.image h3 {
+    margin-top: 5px;
+    font-weight: 900;
+    font-size: 18px;
+    z-index: 100;
+    color: #fff
+}
+
+.image h4 {
+    margin-top: -3px;
+    font-size: 13px;
+    z-index: 100;
+    color: #fff
+}
+
+.arc {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
+    position: relative
 }
 
-.user_bio{
-    border:1px solid yellow;
-    padding: 8px;
-}
-
-#see-more{
-    display: none;
-    color: blue;
-}
-
-#see-less{
-    display: none;
-    color: blue;
-}
-
-.subscriber_sec{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 15px;
-}
-
-.fullPageDisplay{
-  display: none;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  z-index: 9999;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-size: contain;
-  background-repeat: no-repeat no-repeat;
-  background-position: center center;
-  background-color: black;
-}
-
-.close-full-screen{
+.arc span {
+    height: 600px;
+    width: 600px;
+    background-image: linear-gradient(to bottom, #B8550F, #626262);
+    border-radius: 50%;
     position: absolute;
-    top: 20px;
-    left: 20px;
-    color: white;
+    right: -135px;
+    top: -590px
+}
+
+.about {
+    padding: 10px 20px
+}
+
+.about p:nth-child(1) {
+    font-weight: 600
+}
+
+.about p:nth-child(2) {
+    font-size: 13px;
+    padding-right: 90px
+}
+
+.button {
+    padding-left: 20px;
+    display: flex;
+    position: relative;
+    padding-top: 35px;
+    justify-content: center;
+    align-items: center;
+}
+
+.button button:nth-child(1) {
+    height: 30px;
+    width: 90px;
+    margin-right: 10px;
+    color: #fff;
+    background-color: green;
+    font-size: 12px;
+    border-radius: 30px;
+    border: none;
+    transition: all 0.5s;
+    cursor: pointer
+}
+
+.button button:nth-child(2) {
+    height: 30px;
+    width: 90px;
+    margin-right: 10px;
+    color: #4D38F6;
+    border-radius: 30px;
+    border: 2px solid green;
+    font-size: 12px;
+    background-color: #fff;
+    transition: all 0.5s
+}
+
+.button button:nth-child(3) {
+    height: 30px;
+    width: 90px;
+    margin-right: 10px;
+    color: #4D38F6;
+    border-radius: 30px;
+    border: 2px solid green;
+    font-size: 12px;
+    background-color: #fff;
+    transition: all 0.5s
+}
+
+
+.button button:nth-child(1):hover {
+    background-image: linear-gradient(to right, #B8550F, #626262)
+}
+
+.button button:nth-child(2):hover {
+    background-color: #ccc;
+    color: #000;
+    font-weight: 700
+}
+
+.button button:nth-child(3):hover {
+    background-color: #ccc;
+    color: #000;
+    font-weight: 700
+}
+
+.profile-info {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center
+}
+
+.profile-info .user-stat{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottom-menu{
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color:#f1f1f1;
+    padding: 4px;
+    z-index: 9999;
+}
+
+.bottom-menu li{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.tab-user-account{
+    border: 1px solid blue;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+}
+
+.tab-user-account span{
+    padding: 8px;
+    margin: 4px;
+}
+
+.wrapper-contents{
+    border: 1px solid green;
+    min-height: 250px;
+    margin-bottom: 100px;
 }
