50% done now back to specific work on each page. Include bootstrap if need, desing emails... keep it up bro

--- a/css/profile.css
+++ b/css/profile.css
@@ -168,6 +168,17 @@
     transition: all 0.5s
 }
 
+.button button:nth-child(4) {
+    height: 30px;
+    width: 90px;
+    margin-right: 10px;
+    color: #4D38F6;
+    border-radius: 30px;
+    border: 2px solid green;
+    font-size: 12px;
+    background-color: #fff;
+    transition: all 0.5s
+}
 
 .button button:nth-child(1):hover {
     background-image: linear-gradient(to right, #B8550F, #626262)
@@ -234,3 +245,60 @@
     min-height: 250px;
     margin-bottom: 100px;
 }
+
+/*Ticket card*/
+.ticket-wrapper{
+    border:1px solid red;
+    padding: 8px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+   
+}
+
+
+/*Modal CSS*/
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .ticket-content .qrcode{
+      border: 1px solid blue;
+      width: 100px;
+      height: 100px;
+  }
