--- a/css/verification.css
+++ b/css/verification.css
@@ -3,30 +3,22 @@ body{
     padding: 0;
 }
 
-.header-confirmation{
-    padding: 8px;
-}
-
-.graphic-verification{
+.main-wrapper{
+    width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 16px;
-    margin-top: 50px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 14px;
 }
-
-.message-verification{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.btn-verification-actions{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    padding: 8px;
+.box-confirmation{
+    width: 250px;
+    border-radius: 15px;
+    background-color: #ffffff;
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+    margin-bottom: 25px;
+    
+    
 }
