--- a/css/profile.css
+++ b/css/profile.css
@@ -228,6 +228,86 @@
     align-items: center;
 }
 
+/*Card flip events CSS*/
+
+.container-events-flip-card{
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper-flip-card{
+    display: flex;
+    flex-direction: column;
+     margin: 40px 0;
+}
+
+.wrapper-flip-card .container-btn{
+    display: flex;
+    justify-content: center;
+    padding: 8px;
+}
+
+.container-btn button{
+    border: none;
+    border-radius: 15px;
+    padding: 8px;
+    margin-left: 4px;
+    background-color:rgb(0, 162, 255);
+    color: white;
+    cursor: pointer;
+}
+
+.scene{
+    display: inline-block;
+    width: 95%;
+    height: 350px;
+    perspective: 600px;
+    border-radius: 5px;
+  }
+  
+  .card-event {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    transform-style: preserve-3d;
+    transform-origin: center right;
+    transition: transform 1s;
+  }
+  
+  .card-event.is-flipped {
+    transform: translateX(-100%) rotateY(-180deg);
+  }
+  
+  .card__face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    line-height: 8px;
+    color: black;
+    text-align: center;
+    font-weight: bold;
+    font-size: 14px;
+    backface-visibility: hidden;
+  }
+  
+  .card__face--front {
+    background: crimson;
+  }
+  
+  .card__face--back {
+    background: #E7E6E6;
+    transform: rotateY(180deg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card__face--back span{
+      margin-bottom: 8px;
+  }
+
 
 /*CSS Bottom navigation*/
 .app-navigation-container {
