--- a/css/etc_create_event.css
+++ b/css/etc_create_event.css
@@ -9,6 +9,50 @@ body{
     font-family: 'roboto', sans-serif;
 }
 
+/*CSS for My custom loader*/
+.bg-transpa{
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    z-index: 99;
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    font-size: 18px;
+    font-family: Verdana, sans-serif
+}
+
+.bg-transpa .loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+
+  .bg-transpa .text-loading-container{
+      margin-top: 15px;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  /*End of zima-loading css*/
+  
 .page-top-bar{
     display: flex;
     flex-direction: row;
