--- a/css/etc_home.css
+++ b/css/etc_home.css
@@ -20,6 +20,56 @@ body{
     font-family: 'roboto', sans-serif;
 }
 
+/*CSS for My custom loader*/
+.bg-transpa{
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    z-index: 99;
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    font-size: 18px;
+    font-family: Verdana, sans-serif
+}
+
+.bg-transpa .loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+
+  .bg-transpa .text-loading-container{
+      margin-top: 15px;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+/*CSS for my small text-loader*/
+.mini-text-loader{
+    display: none;
+    font-size: 22px;
+    font-style: italic;
+}
+
 .navbar{
     position: fixed;
     top: 0;
@@ -47,7 +97,7 @@ body{
     margin-top: 5px;
 }
 
-.search-box{
+/*.search-box{
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -59,11 +109,11 @@ body{
     color: rgba(0, 0, 0, 0.5);
     text-align: center;
     text-transform: capitalize;
-}
+}*/
 
-.search-box::placeholder{
+/*.search-box::placeholder{
     color: rgba(0, 0, 0, 0.5);
-}
+}*/
 
 .nav-items{
     height: 22px;
@@ -120,6 +170,16 @@ body{
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
+}
+
+/*Small CSS for ticket head To differenciate them*/
+.info-ticket{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 10px 20px;
 }
 
 .info .username{
@@ -746,9 +806,9 @@ body{
 /*END Bottom navbar CSS*/
 
 @media (max-width: 1100px){
-    .right-col, .search-box{
+    /*.right-col, .search-box{
         display: none;
-    }
+    }*/
     .nav-wrapper,
     .wrapper{
         width: 90%;
